Automapper changes and FormsController changes

--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -104,8 +104,13 @@
 </div>
 
 
+    <!-- Jquery js -->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <!-- Data tables js -->
 <script type="text/javascript">
     $(document).ready(function () {
+       
         bind();
         $("#modelclose").click(function () {
             $("#newformcreate").removeClass("disabled");
@@ -303,6 +308,7 @@
         var cFormDescription = $('#FormDescription').val();
         var cFormOrdinal = $('#FormOrdinal').val();
         var cFormStatus = $('#selectedstatus').val();
-
+    }
 
 </script>
+    
