--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -49,13 +49,11 @@
                 <table class="table table-striped table-bordered table-responsive" id="tbForm" style="width:100%">
                     <thead>
                         <tr class="bg-secondary">
-                            @* <th style="min-width:100px">Serial Number</th>*@
+
                             <th style="min-width:30px">Name</th>
-                           @* <th style="min-width:30px">Description</th>*@
-                            @*                            <th style="min-width:30px">Status</th>
-                            *@
-@*                            <th style="min-width:30px">Ordinal</th>
-*@                            @*  <th style="min-width:30px">Actions</th>
+                            <th style="min-width:30px">Description</th>
+                            <th style="min-width:30px">Ordinal</th>
+                            @*  <th style="min-width:30px">Actions</th>
                             <th style="min-width:30px">Fields</th>
                             <th style="min-width:30px">Apply</th>
                             <th style="min-width:30px">Submissions</th>*@
@@ -137,7 +135,7 @@
         //    debugger
         //}
         bind();
-        
+
         $('#btnFormClose').click(function () {
             clearFormCreate();
         });
@@ -242,17 +240,17 @@
                                             }
                                         }
                                     },
-                                    //{
-                                    //    mData: null,
-                                    //    render: function (item, type, row) {
+                                    {
+                                        mData: null,
+                                        render: function (item, type, row) {
 
-                                    //        if (item.description != null && item.description != "" && item.description != undefined) {
-                                    //            return item.description;
-                                    //        } else {
-                                    //            return "N/A";
-                                    //        }
-                                    //    }
-                                    //},
+                                            if (item.description != null && item.description != "" && item.description != undefined) {
+                                                return item.description;
+                                            } else {
+                                                return "N/A";
+                                            }
+                                        }
+                                    },
                                     //{
                                     //    mData: null,
                                     //    render: function (item, type, row) {
@@ -265,16 +263,16 @@
                                     //    }
                                     //},
                                     //{
-                                    //    mData: null,
-                                    //    render: function (item, type, row) {
+                                        mData: null,
+                                        render: function (item, type, row) {
 
-                                    //        if (item.ordinal != null && item.ordinal != "" && item.ordinal != undefined) {
-                                    //            return item.ordinal;
-                                    //        } else {
-                                    //            return "N/A";
-                                    //        }
-                                    //    }
-                                    //},
+                                            if (item.ordinal != null && item.ordinal != "" && item.ordinal != undefined) {
+                                                return item.ordinal;
+                                            } else {
+                                                return "N/A";
+                                            }
+                                        }
+                                    },
                                     //{
                                     //    mData: null,
                                     //    render: function (item, type, row) {
